--- a/admin.html
+++ b/admin.html
@@ -687,6 +687,10 @@
         async function handleManualEntrySubmit(e) { /* ... */ }
         async function processPayout(e) { /* ... */ }
         function populateReferrerDropdown() { /* ... */ }
+        function formatCurrency(value) {
+             if (typeof value !== 'number' || isNaN(value)) return '$0.00';
+             return value.toLocaleString('en-US', { style: 'currency', currency: 'USD' });
+        }
 
     </script>
 </body>
